Update to gradle 9.1.0. Fixes #138